Clean not used builders and rename to SemanticZoomDescription complete commit

--- a/packages/view/backend/sirius-components-view-edit/plugin.properties
+++ b/packages/view/backend/sirius-components-view-edit/plugin.properties
@@ -343,3 +343,6 @@ _UI_FlexDirection_columnReverse_literal = column-reverse
 _UI_SemanticZoom_type = Semantic Zoom
 _UI_NodeDescription_semanticZoom_feature = Semantic Zoom
 _UI_SemanticZoom_activeSemanticZoom_feature = Active Semantic Zoom
+_UI_SemanticZoomDescription_type = Semantic Zoom Description
+_UI_NodeDescription_semanticZoomDescription_feature = Semantic Zoom Description
+_UI_SemanticZoomDescription_activeSemanticZoom_feature = Active Semantic Zoom
