--- a/packages/view/backend/sirius-components-view-edit/plugin.properties
+++ b/packages/view/backend/sirius-components-view-edit/plugin.properties
@@ -346,3 +346,21 @@ _UI_SemanticZoom_activeSemanticZoom_feature = Active Semantic Zoom
 _UI_SemanticZoomDescription_type = Semantic Zoom Description
 _UI_NodeDescription_semanticZoomDescription_feature = Semantic Zoom Description
 _UI_SemanticZoomDescription_activeSemanticZoom_feature = Active Semantic Zoom
+_UI_AutomaticZoomingByDepthStrategy_type = Automatic Zooming By Depth Strategy
+_UI_NumberOfRelationStrategy_type = Number Of Relation Strategy
+_UI_ManuallyDefinedStrategy_type = Manually Defined Strategy
+_UI_SemanticZoomDescription_automaticZoomingByDepthStrategy_feature = Automatic Zooming By Depth Strategy
+_UI_SemanticZoomDescription_numberOfRelationStrategy_feature = Number Of Relation Strategy
+_UI_SemanticZoomDescription_manuallyDefinedStrategy_feature = Manually Defined Strategy
+_UI_AutomaticZoomingByDepthStrategy_activeStrategy_feature = Active Strategy
+_UI_AutomaticZoomingByDepthStrategy_styleDetailled_feature = Style Detailled
+_UI_AutomaticZoomingByDepthStrategy_styleNormal_feature = Style Normal
+_UI_AutomaticZoomingByDepthStrategy_styleSummarized_feature = Style Summarized
+_UI_NumberOfRelationStrategy_activeStrategy_feature = Active Strategy
+_UI_NumberOfRelationStrategy_styleDetailled_feature = Style Detailled
+_UI_NumberOfRelationStrategy_styleNormal_feature = Style Normal
+_UI_NumberOfRelationStrategy_styleSummarized_feature = Style Summarized
+_UI_ManuallyDefinedStrategy_activeStrategy_feature = Active Strategy
+_UI_ManuallyDefinedStrategy_styleDetailled_feature = Style Detailled
+_UI_ManuallyDefinedStrategy_styleNormal_feature = Style Normal
+_UI_ManuallyDefinedStrategy_styleSummarized_feature = Style Summarized
