Sending the complete information to the client with graphQL

--- a/packages/view/backend/sirius-components-view-edit/plugin.properties
+++ b/packages/view/backend/sirius-components-view-edit/plugin.properties
@@ -364,3 +364,9 @@ _UI_ManuallyDefinedStrategy_activeStrategy_feature = Active Strategy
 _UI_ManuallyDefinedStrategy_styleDetailled_feature = Style Detailled
 _UI_ManuallyDefinedStrategy_styleNormal_feature = Style Normal
 _UI_ManuallyDefinedStrategy_styleSummarized_feature = Style Summarized
+_UI_SemanticZoomStrategy_type = Semantic Zoom Strategy
+_UI_SemanticZoomDescription_semanticZoomStrategies_feature = Semantic Zoom Strategies
+_UI_SemanticZoomStrategy_activeStrategy_feature = Active Strategy
+_UI_SemanticZoomStrategy_styleDetailled_feature = Style Detailled
+_UI_SemanticZoomStrategy_styleNormal_feature = Style Normal
+_UI_SemanticZoomStrategy_styleSummarized_feature = Style Summarized
