Adding the possibility to specify the number of relation to change a node

--- a/packages/view/backend/sirius-components-view-edit/plugin.properties
+++ b/packages/view/backend/sirius-components-view-edit/plugin.properties
@@ -370,3 +370,4 @@ _UI_SemanticZoomStrategy_activeStrategy_feature = Active Strategy
 _UI_SemanticZoomStrategy_styleDetailled_feature = Style Detailled
 _UI_SemanticZoomStrategy_styleNormal_feature = Style Normal
 _UI_SemanticZoomStrategy_styleSummarized_feature = Style Summarized
+_UI_NumberOfRelationStrategy_numberOfRelation_feature = Number Of Relation
