--- a/packages/view/backend/sirius-components-view-edit/plugin.properties
+++ b/packages/view/backend/sirius-components-view-edit/plugin.properties
@@ -371,3 +371,6 @@ _UI_SemanticZoomStrategy_styleDetailled_feature = Style Detailled
 _UI_SemanticZoomStrategy_styleNormal_feature = Style Normal
 _UI_SemanticZoomStrategy_styleSummarized_feature = Style Summarized
 _UI_NumberOfRelationStrategy_numberOfRelation_feature = Number Of Relation
+_UI_ManuallyDefinedStrategy_zoomDetailled_feature = Zoom Detailled
+_UI_ManuallyDefinedStrategy_zoomNormal_feature = Zoom Normal
+_UI_ManuallyDefinedStrategy_zoomSummarized_feature = Zoom Summarized
