--- a/packages/view/backend/sirius-components-view-edit/plugin.properties
+++ b/packages/view/backend/sirius-components-view-edit/plugin.properties
@@ -374,3 +374,4 @@ _UI_NumberOfRelationStrategy_numberOfRelation_feature = Number Of Relation
 _UI_ManuallyDefinedStrategy_zoomDetailled_feature = Zoom Detailled
 _UI_ManuallyDefinedStrategy_zoomNormal_feature = Zoom Normal
 _UI_ManuallyDefinedStrategy_zoomSummarized_feature = Zoom Summarized
+_UI_EmptyNodeStyleDescription_type = Empty Node Style Description
